fix: remove horizontal gaps in table header

--- a/public/edittrax-styles.css
+++ b/public/edittrax-styles.css
@@ -206,7 +206,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .table-edittrax th {
-  padding: var(--spacing-3);
+  padding: 0;
   font-family: var(--font-mathias);
   color: var(--color-yellow-75);
   text-align: left;
